ingress-lab/go-rest-api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-rest-api
  labels:
    app: go-rest-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-rest-api
  template:
    metadata:
      labels:
        app: go-rest-api
    spec:
      containers:
        - name: chentex-go-rest-api
          image: chentex/go-rest-api
          ports:
            - containerPort: 8080
