ingress-lab/go-rest-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-rest-api-service
spec:
  selector:
    app: go-rest-api
  ports:
      - port: 8080
        targetPort: 8080
