ingress-lab/go-rest-api.ingress.yaml
# into /etc/hosts we need to put: 192.168.49.2 go.com
# The ip 192.168.49.2 is the result from minikube ip command
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-rest-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        # This domain would be added in /etc/hosts file matching with the minikube external ip, example 192.168.49.2 go.com
        - go.com
    - secretName: go-rest-api-secret-tls
  rules:
    - host: go.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-rest-api-service
                port:
                  number: 8080
